examples/java/failing/imitate_separators_outside_of_conflict/ExpectedIdeally.java

public interface Jsonizable {
        String getId();
        String serialize();
        void prettyPrint();
}
